--- a/app/home/home.html
+++ b/app/home/home.html
@@ -9,8 +9,8 @@
    
     <link href="justified-nav.css" rel="stylesheet">
      <script type="text/javascript" src="spin.min.js"></script>
-		 <script type="text/javascript" src="ladda.js"></script>
-		 <link rel="stylesheet" type="text/css" href="style.css">
+		 <script type="text/javascript" src="ladda.min.js"></script>
+		 <link rel="stylesheet" type="text/css" href="ladda-themeless.min.css">
     
   </head>
 
